[gd_scene load_steps=2 format=3 uid="uid://j5s6t1u2v3w4x"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="CanvasLayer"]
layer = 15
visible = false
script = ExtResource("1_settings")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicVolume" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
max_value = 100.0
value = 70.0
tick_count = 11

[node name="SFXVolume" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
max_value = 100.0
value = 80.0
tick_count = 11

[node name="FullscreenToggle" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="DifficultyPreset" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/DifficultyPreset"]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty:"
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/DifficultyPreset"]
layout_mode = 2
size_flags_horizontal = 3
selected = 1
item_count = 4
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2
popup/item_3/text = "Extreme"
popup/item_3/id = 3

[node name="Separator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"
